[gd_scene load_steps=3 format=2]

[ext_resource path="res://kenneyUI-yellow.tres" type="Theme" id=1]
[ext_resource path="res://Scripts/End_Multi.gd" type="Script" id=2]

[node name="End" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 298.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Player1" type="CenterContainer" parent="VBoxContainer/HBoxContainer"]
margin_right = 510.0
margin_bottom = 298.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/Player1"]
margin_left = 172.0
margin_top = 45.0
margin_right = 337.0
margin_bottom = 252.0
text = "Player 1

Grade:
Score:
Max combo:
Perfect notes:
Great notes:
Good notes:
Okay notes:
Missed notes:"

[node name="Player2" type="CenterContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 514.0
margin_right = 1024.0
margin_bottom = 298.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/Player2"]
margin_left = 172.0
margin_top = 45.0
margin_right = 337.0
margin_bottom = 252.0
text = "Player 2

Grade:
Score:
Max combo:
Perfect notes:
Great notes:
Good notes:
Okay notes:
Missed notes:"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 302.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CenterContainer2" type="CenterContainer" parent="VBoxContainer/HBoxContainer2"]
margin_right = 510.0
margin_bottom = 298.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PlayAgain" type="Button" parent="VBoxContainer/HBoxContainer2/CenterContainer2"]
margin_left = 187.0
margin_top = 127.0
margin_right = 321.324
margin_bottom = 169.251
size_flags_horizontal = 5
text = "play again"

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/HBoxContainer2"]
margin_left = 514.0
margin_right = 1024.0
margin_bottom = 298.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="BackToMenu" type="Button" parent="VBoxContainer/HBoxContainer2/CenterContainer"]
margin_left = 222.0
margin_top = 127.0
margin_right = 287.324
margin_bottom = 169.251
text = "quit"

[connection signal="pressed" from="VBoxContainer/HBoxContainer2/CenterContainer2/PlayAgain" to="." method="_on_PlayAgain_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/CenterContainer/BackToMenu" to="." method="_on_BackToMenu_pressed"]
